--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -17,8 +17,18 @@
       <div class="col-xs-10">
         <ul class="list-group">
           @for (contact of contacts; track $index) {
-          <a class="list-group-item" style="cursor: pointer">
-            {{ contact.name }} ({{ contact.phone }})
+          <a href="#" class="list-group-item clearfix" style="cursor: pointer">
+            <div class="pull-left">
+              <h4 class="list-group-item-heading">{{ contact.name }}</h4>
+              <p class="list-group-item-text">{{ contact.email }}</p>
+            </div>
+            <span class="badge pull-right"
+              ><img
+                [src]="contact.imageUrl"
+                alt="contact photo of {{ contact.name }}"
+                class="img-responsive"
+                style="max-height: 50px"
+            /></span>
           </a>
           }
         </ul>
