--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<cms-header></cms-header>
+<cms-header (featureSelected)="loadedFeature = $event"></cms-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      @if (loadedFeature === 'documents') {
+      <cms-documents></cms-documents>
+      } @else if (loadedFeature === 'messages') {
+      <cms-message-list></cms-message-list>
+      } @else {
       <cms-contacts></cms-contacts>
+      }
     </div>
   </div>
 </div>
