--- a/src/app/messages/message-edit/message-edit.component.html
+++ b/src/app/messages/message-edit/message-edit.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onSend()">
+          <button class="btn btn-success" type="button" (click)="onSend()">
             Send
           </button>
           <button class="btn btn-danger" type="button" (click)="onClear()">
