--- a/src/app/messages/message-list/message-item/message-item.component.html
+++ b/src/app/messages/message-list/message-item/message-item.component.html
@@ -1,4 +1,4 @@
-<a class="list-group-item clearfix" href="#">
+<a class="list-group-item clearfix">
   <div class="">
     <span class="messageHeader">{{ message.sender }}</span>
     <div class="messageText">{{ message.msgText }}</div>
