added custom directive finished documents tab

--- a/lesson4Files/document-list.component.html
+++ b/lesson4Files/document-list.component.html
@@ -1,18 +1,14 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="row pad-left-right">
-      <span class="pull-left title">Add Documents</span>
+      <span class="pull-left title">Documents</span>
       <a class="btn btn-success pull-right">Add Document</a>
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel">
-      @for (doc of documents; track $index){
-      <cms-document-item
-        [item]="doc"
-        (click)="onDocumentSelected(doc)"
-      ></cms-document-item>
-      }
+      <cms-document-item></cms-document-item>
     </div>
   </div>
+
 </div>
