--- a/src/app/messages/message-list/message-item/message-item.component.html
+++ b/src/app/messages/message-list/message-item/message-item.component.html
@@ -1,6 +1,6 @@
 <a class="list-group-item clearfix">
   <div class="">
-    <span class="messageHeader">{{ message.sender }}</span>
+    <span class="messageHeader">{{ sender.name }}</span>
     <div class="messageText">{{ message.msgText }}</div>
   </div>
 </a>
