--- a/src/app/messages/message-list/message-list.component.html
+++ b/src/app/messages/message-list/message-list.component.html
@@ -16,9 +16,7 @@
         </div>
       </div>
       <div class="panel-footer">
-        <cms-message-edit
-          (messageSent)="onMessageSent($event)"
-        ></cms-message-edit>
+        <cms-message-edit></cms-message-edit>
       </div>
     </div>
   </div>
