--- a/src/app/contacts/contact-list/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-list/contact-item/contact-item.component.html
@@ -1,4 +1,9 @@
-<a href="#" class="list-group-item clearfix" style="cursor: pointer">
+<a
+  style="cursor: pointer"
+  class="list-group-item clearfix"
+  style="cursor: pointer"
+  routerLinkActive="active"
+>
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ contact.name }}</h4>
     <p class="list-group-item-text">{{ contact.email }}</p>
