--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,13 +1,8 @@
 <div class="row">
   <div class="col-md-5">
-    <cms-contact-list
-     
-    ></cms-contact-list>
+    <cms-contact-list></cms-contact-list>
   </div>
   <div class="col-md-4">
-    @if (selectedContact) {
-    <cms-contact-detail [contact]="selectedContact"></cms-contact-detail>
-
-    }
+    <router-outlet></router-outlet>
   </div>
 </div>
