--- a/src/app/documents/document-list/document-item/document-item.component.html
+++ b/src/app/documents/document-list/document-item/document-item.component.html
@@ -1,3 +1,7 @@
-<a class="list-group-item clearfix documentDiv">
+<a
+  routerLinkActive="active"
+  routerLink="/documents/{{ doc.id }}"
+  class="list-group-item clearfix documentDiv"
+>
   {{ doc.name }}
 </a>
