--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -1,17 +1,19 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="row pad-left-right">
-      <span class="pull-left title">Add Documents</span>
-      <a class="btn btn-success pull-right">Add Document</a>
+      <span class="pull-left title">Documents</span>
+      <a
+        routerLink="/documents/new"
+        style="cursor: pointer"
+        class="btn btn-success pull-right"
+        >Add Document</a
+      >
     </div>
   </div>
   <div class="panel-body">
     <div class="center-panel">
       @for (doc of documents; track $index){
-      <cms-document-item
-        [item]="doc"
-        (click)="onDocumentSelected(doc)"
-      ></cms-document-item>
+      <cms-document-item [item]="doc"></cms-document-item>
       }
     </div>
   </div>
