--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,24 +1,30 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">WeLearn CMS</a>
+      <a style="cursor: pointer" class="navbar-brand">WeLearn CMS</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onNavSelect('documents')">Documents</a></li>
-        <li><a href="#" (click)="onNavSelect('messages')">Messages</a></li>
-        <li><a href="#" (click)="onNavSelect('contacts')">Contacts</a></li>
+        <li routerLinkActive="active">
+          <a routerLink="/documents" style="cursor: pointer">Documents</a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/messages" style="cursor: pointer">Messages</a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/contacts" style="cursor: pointer">Contacts</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" cmsDropdown>
-          <a href="#" class="dropdown-toggle" role="button"
+          <a style="cursor: pointer" class="dropdown-toggle" role="button"
             >User <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Other</a></li>
+            <li><a style="cursor: pointer">Login</a></li>
+            <li><a style="cursor: pointer">Other</a></li>
             <hr />
-            <li><a href="#">Logout</a></li>
+            <li><a style="cursor: pointer">Logout</a></li>
           </ul>
         </li>
       </ul>
