--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -42,6 +42,10 @@
       <div class="col-xs-12">
         <p><strong>Email:</strong> {{ contact.email }}</p>
         <p><strong>Phone:</strong> {{ contact.phone }}</p>
+        <p><strong>Group Contacts:</strong></p>
+        <div *ngFor="let child of contact.group">
+          <cms-contact-item [contact]="child"></cms-contact-item>
+        </div>
       </div>
     </div>
   </div>
