Connected to db

--- a/src/app/documents/document-list/document-list.component.html
+++ b/src/app/documents/document-list/document-list.component.html
@@ -12,9 +12,9 @@
   </div>
   <div class="panel-body">
     <div class="center-panel">
-      @for (doc of documents; track $index){
+      @if (documents.length > 0) { @for (doc of documents; track $index){
       <cms-document-item [item]="doc"></cms-document-item>
-      }
+      } }
     </div>
   </div>
 </div>
