--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,29 +1,42 @@
 <div class="panel panel-default">
-  <div class="panel-heading">
-    <strong>Contacts</strong
-    ><span
-      style="
-        right: inherit;
-        float: right;
-        position: absolute;
-        top: 5px;
-        right: 20px;
-      "
-      ><a
-        routerLink="/contacts/new"
-        style="cursor: pointer"
-        role="button"
-        class="btn btn-success"
-        >New Contact</a
-      ></span
-    >
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="panel panel-default">
+        <div class="panel-heading" style="padding: 25px">
+          <div class="row">
+            <span class="title pad-left-right"><strong>Contacts</strong></span>
+          </div>
+          <div class="row">
+            <div class="input-group pull-left pad-left-right col-xs-7">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search Contacts"
+                #searchBox
+                (keyup.enter)="search(searchBox.value)"
+              />
+              <div
+                class="glyphicon glyphicon-search input-group-addon"
+                (click)="search(searchBox.value)"
+              ></div>
+            </div>
+            <div class="pull-right pad-left-right">
+              <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-12">
         <ul class="list-group">
           <cms-contact-item
-            *ngFor="let contactEl of contacts; let i = index"
+            *ngFor="
+              let contactEl of contacts | contactsFilter : term;
+              let i = index
+            "
             routerLink="/contacts/{{ contactEl.id }}"
             [contact]="contactEl"
             [index]="contactEl.id"
