--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-  <div class="panel-heading">
+  <div class="panel-heading" *ngIf="contact">
     <strong>{{ contact.name }}</strong>
     <div class="row">
       <div class="col-xs-5">
