--- a/src/app/contacts/contact-edit/contact-edit.component.html
+++ b/src/app/contacts/contact-edit/contact-edit.component.html
@@ -113,7 +113,7 @@
 
       <div class="row">
         <div class="col-xs-12 btn-toolbar">
-          <button class="btn btn-success" type="submit" [disabled]="f.invalid" (click)="onSubmit(f)">
+          <button class="btn btn-success" type="submit" [disabled]="f.invalid">
             Save
           </button>
           <button class="btn btn-primary" type="button" (click)="onCancel()">
