--- a/src/app/contacts/contact-list/contact-item/contact-item.component.html
+++ b/src/app/contacts/contact-list/contact-item/contact-item.component.html
@@ -10,7 +10,9 @@
   </div>
   <span class="badge pull-right"
     ><img
-      [src]="contact.imageUrl"
+      src="{{
+        contact.imageUrl ? contact.imageUrl : '../assets/images/placeholder.jpg'
+      }}"
       alt="contact photo of {{ contact.name }}"
       class="img-responsive"
       style="max-height: 50px"
