--- a/src/app/contacts/contact-detail/contact-detail.component.html
+++ b/src/app/contacts/contact-detail/contact-detail.component.html
@@ -4,7 +4,11 @@
     <div class="row">
       <div class="col-xs-5">
         <img
-          src="{{ contact.imageUrl }}"
+          src="{{
+            contact.imageUrl
+              ? contact.imageUrl
+              : '../assets/images/placeholder.jpg'
+          }}"
           alt="contact photo of {{ contact.name }}"
           style="max-width: 50px; margin: 5px"
         />
